# work-stealing-threadpool

./: CMakeLists.txt  DESIGN.md  LICENSE  README.md
benchmarks/: bench_main.cpp
include/: global_queue.h  minitest.h  task.h  thread_pool.h  work_stealing_deque.h
tests/: global_queue_tests.cpp  test_main.cpp  work_stealing_tests.cpp
